src/assets/main.css
@import url('./base.css');

body, html {
    margin: 0;
    padding: 0;
}

body {
    font-family: var(--md-ref-typeface-plain);
    background-color: var(--md-sys-color-background);
    width: 100dvw;
    height: 100dvh;
}

::-webkit-scrollbar {
    display: none;
}

button {
    outline: none;
    border: none;
    background-color: transparent;
    margin: 0;
    padding: 0;
    font-family: var(--md-ref-typeface-plain);
}

